--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.0",
     "@reduxjs/toolkit": "^1.5.0",
@@ -34,6 +35,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/remote-redux-devtools": "^0.5.4",
     "@types/styled-components": "^5.1.7",
+    "@types/styled-components-react-native": "^5.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
