--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.0",
+    "@react-navigation/stack": "^5.13.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
@@ -30,6 +32,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.167",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.15",
     "@types/react-test-renderer": "^16.9.2",
